--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
     <meta name="description" content="@(ViewData["Description"] ?? "سایت خرید و فروش آنلاین گوشی های موبایل به صورت اقساطی")">
     <meta name="keywords" content="@(ViewData["Keywords"] ?? "قصر موبایل، گوشی، تلفن، خرید، آنلاین، اقساطی")">
     <meta name="author" content="صدرا محمدی، ینال احمدزاده، مهدی سهندی">
+    <meta name="enamad" content="775618">
 
-    <title>@(ViewData["Title"] ?? "قصر موبایل")</title>
+    @*<title>@(ViewData["Title"] ?? "قصر موبایل")</title>*@
+    <title> 933216</title>
 
     <link href="~/css/uikit.min.css" rel="stylesheet" />
     <link href="~/css/Controls.min.css" rel="stylesheet" />
