--- a/GhasreMobile/Views/Gallery/_AlbumBlock.cshtml
+++ b/GhasreMobile/Views/Gallery/_AlbumBlock.cshtml
@@ -3,7 +3,7 @@
 {
     <div class="albumBlock mat col uk-overflow-hidden">
         <a href="/AlbumView/@Model.AlbumId/@Model.Name">
-            <img src="~/Images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" alt="" />
+            <img src="~/images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" alt="" />
         </a>
         <div class="mat-pad col">
             <h2 class="uk-h5"><a href="/AlbumView/@Model.AlbumId/@Model.Name" class="link-text">@Model.Name</a></h2>
