--- a/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
@@ -11,7 +11,7 @@
         <div class="grid">
             @foreach (var item in Model)
             {
-                <a href="/AlbumView/@item.AlbumId/@item.Album.Name" ><img src="~/Images/ProductAlbum/@item.Image" alt="" /></a>
+                <a href="/AlbumView/@item.AlbumId/@item.Album.Name" ><img src="~/images/ProductAlbum/@item.Image" alt="" /></a>
             }
         </div>
         <div class="row">
