--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                     <img src="~/st/r/logo.jpg" width="48" height="48" alt="لوگو فصر موبایل" />
                 </a>
                 <div class="search">
-                    <span class="btn btn-primary" dir="rtl" onclick="window.location = '/Search?q=' + (this.parentElement.querySelector('[name=q]').value)">
+                    <span class="btn btn-primary" id="myBtntxtSearchMain" dir="rtl" onclick="window.location = '/Search?q=' + (this.parentElement.querySelector('[name=q]').value)">
                         <span>جستجو پیشرفته</span>
                         <span uk-icon="search"></span>
                     </span>
@@ -95,18 +95,19 @@
                            aria-label="جستجو"
                            oninput="SearchInput(this)" />
                 </div>
+
                 <div uk-drop="boundary: .top; pos:bottom-justify; offset: 12; mode: none"
                      id="dropSearch">
                     <div class="drop-content mat-border mat col">
                         @*<a href="">
-                            این یک <strong>گزینه</strong> می باشد
-                        </a>
-                        <a href="">
-                            این یک <strong>گزینه</strong> می باشد
-                        </a>
-                        <a href="">
-                            این یک <strong>گزینه</strong> می باشد
-                        </a>*@
+                                این یک <strong>گزینه</strong> می باشد
+                            </a>
+                            <a href="">
+                                این یک <strong>گزینه</strong> می باشد
+                            </a>
+                            <a href="">
+                                این یک <strong>گزینه</strong> می باشد
+                            </a>*@
                     </div>
                 </div>
 
@@ -328,7 +329,15 @@
     <script src="~/Validate/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
     <script src="~/Validate/jquery.unobtrusive-ajax.min.js"></script>
-
+    <script>
+        var input = document.getElementById("txtSearchMain");
+        input.addEventListener("keyup", function (event) {
+            if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("myBtntxtSearchMain").click();
+            }
+        });
+    </script>
     <script>
         function reply(commentId) {
             // آیدی کامنتی که بهش پاسخ داریم میدیم رو میزارم تو یه اینپوت
@@ -503,7 +512,7 @@
         }
 
     </script>
- 
+
     <!--BEGIN RAYCHAT CODE-->
     <script type="text/javascript">!function () { function t() { var t = document.createElement("script"); t.type = "text/javascript", t.async = !0, localStorage.getItem("rayToken") ? t.src = "https://app.raychat.io/scripts/js/" + o + "?rid=" + localStorage.getItem("rayToken") + "&href=" + window.location.href : t.src = "https://app.raychat.io/scripts/js/" + o + "?href=" + window.location.href; var e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(t, e) } var e = document, a = window, o = "ed2cbd05-94f9-447e-8556-4bad0cf1ac1c"; "complete" == e.readyState ? t() : a.attachEvent ? a.attachEvent("onload", t) : a.addEventListener("load", t, !1) }();</script> <!--END RAYCHAT CODE-->
     @RenderSection("Scripts", false)
