--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -7,10 +7,8 @@
     <meta name="description" content="@(ViewData["Description"] ?? "سایت خرید و فروش آنلاین گوشی های موبایل به صورت اقساطی")">
     <meta name="keywords" content="@(ViewData["Keywords"] ?? "قصر موبایل، گوشی، تلفن، خرید، آنلاین، اقساطی")">
     <meta name="author" content="صدرا محمدی، ینال احمدزاده، مهدی سهندی">
-    <meta name="enamad" content="775618">
 
-    @*<title>@(ViewData["Title"] ?? "قصر موبایل")</title>*@
-    <title> 933216</title>
+    <title>@(ViewData["Title"] ?? "قصر موبایل")</title>
 
     <link href="~/css/uikit.min.css" rel="stylesheet" />
     <link href="~/css/Controls.min.css" rel="stylesheet" />
@@ -246,7 +244,10 @@
                     <div class="slideshow mat-border" uk-slideshow="autoplay: true; autoplay-interval: 2500; ratio:1:1.12">
                         <ul class="uk-slideshow-items mat-border">
                             <li>
-                                <img src="~/st/r/enamad.jpg" uk-tooltip="در دست اقدام" alt="" uk-cover>
+                                <a referrerpolicy="origin" target="_blank" href="https://trustseal.enamad.ir/?id=209922&amp;Code=5WQXgHkeclrqQsWnl1Wj">
+                                    <img referrerpolicy="origin" src="https://Trustseal.eNamad.ir/logo.aspx?id=209922&amp;Code=5WQXgHkeclrqQsWnl1Wj" alt="" style="cursor:pointer" id="5WQXgHkeclrqQsWnl1Wj">
+                                    @*<img src="~/st/r/enamad.jpg" uk-tooltip="در دست اقدام" alt="" uk-cover>*@
+                                </a>
                             </li>
                             <li>
                                 <img src="~/st/r/resane.jpg" uk-tooltip="در دست اقدام" alt="" uk-cover>
