--- a/GhasreMobile/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Views/Blog/Index.cshtml
@@ -15,7 +15,7 @@
     <a href="#" class="active">تمام اخبار</a>
 </nav>
 
-<div class="blogs-grid">
+<div class="blogs-grid  height">
     @foreach (var item in Model)
     {
         <partial name="_BlogBlock" model="item" />
