--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -98,95 +98,8 @@
             LoadingEnd();
         }
 
-        function VoteUp(val) {
-
-            //#region buts
-            var vote = document.getElementById('Vote' + val);
-            const up = vote.parentElement.querySelector('.up');
-            const down = vote.parentElement.querySelector('.down');
-
-            //#endregion
-
-            //#region localStorage
-
-            let cacheVote = votelist.filter(vote => vote.id === val)[0];
-
-            if (cacheVote?.isUp) return;
-            up.classList.remove('link-active');
-            down.classList.remove('link-active');
-
-            if (cacheVote)
-                votelist.splice(votelist.indexOf(cacheVote), 1);
-
-            up.classList.add('link-active');
-
-            votelist.push({ id: val, isUp: true });
-            // update local storage
-            localStorage.setItem(votelistKey, JSON.stringify(votelist));
-
-            //#endregion
-
-            var result = Bjax("/Forum/VoteUp?id=", val, "SP");
-            if (result) {
-                var vote = document.getElementById('Vote' + val);
-                vote.innerText = parseInt(vote.innerText) + 1;
-            } else {
-                UIkit.notification('ابتدا وارد سایت شوید');
-            }
-        }
-
-        function VoteDown(val) {
-
-            //#region buts
-            var vote = document.getElementById('Vote' + val);
-            const up = vote.parentElement.querySelector('.up');
-            const down = vote.parentElement.querySelector('.down');
-
-            //#endregion
-
-            //#region localStorage
-
-            let cacheVote = votelist.filter(vote => vote.id === val)[0];
-
-            if (cacheVote)
-                if (!cacheVote.isUp) return;
-
-            up.classList.remove('link-active');
-            down.classList.remove('link-active');
-
-            if (cacheVote)
-                votelist.splice(votelist.indexOf(cacheVote), 1);
-
-            down.classList.add('link-active');
-
-            votelist.push({ id: val, isUp: false });
-            // update local storage
-            localStorage.setItem(votelistKey, JSON.stringify(votelist));
-
-            //#endregion
-
-            var result = Bjax("/Forum/VoteDown?id=", val, "SP");
-            if (result) {
-                vote.innerText = parseInt(vote.innerText) - 1;
-            } else {
-                UIkit.notification('ابتدا وارد سایت شوید');
-            }
-        }
-
-        // Vote List
-        const votelistKey = "votelist";
-        // [{id,isUp},{5,true}]
-        let votelist = JSON.parse(localStorage.getItem(votelistKey)) || [];
-        let currentVote = votelist?.filter(x => x.id == @Model.TopicId)[0];
-
-        if (currentVote.isUp) {
-            const up = document.querySelector('.up');
-            up.classList.add('link-active');
-        } else {
-            const down = document.querySelector('.down');
-            down.classList.add('link-active');
-        }
-
     </script>
+
+    <script language="JavaScript" type="text/javascript" src="~/js/vote.js"></script>
 
 }
