--- a/GhasreMobile/Views/Home/About.cshtml
+++ b/GhasreMobile/Views/Home/About.cshtml
@@ -12,7 +12,7 @@
 
 }
 
-<div class="mat-card">
+<div class="mat-card height">
     @if (string.IsNullOrEmpty(Model.Value))
     {
         <h1 class="uk-alert uk-text-center">
