--- a/GhasreMobile/Views/Forum/Index.cshtml
+++ b/GhasreMobile/Views/Forum/Index.cshtml
@@ -48,104 +48,8 @@
                 console.log(data);
                 console.log(data.split('ip=')[1].split('ts')[0]);
             });
-
-        // Vote List
-        const votelistKey = "votelist";
-        // [{id,isUp},{5,true}]
-        let votelist = JSON.parse(localStorage.getItem(votelistKey)) || [];
-
-        if (votelist.length > 0) {
-            for (let vote of votelist) {
-
-                let val = vote.id;
-                //#region buts
-                var voteDOM = document.getElementById('Vote' + val);
-                if (vote.isUp) {
-                    const up = voteDOM.parentElement.querySelector('.up');
-                    up.classList.add('link-active');
-                }
-                else if (!vote.isUp) {
-                    const down = voteDOM.parentElement.querySelector('.down');
-                    down.classList.add('link-active');
-                }
-                //#endregion
-            }
-        }
-
-        function VoteUp(val) {
-
-            //#region buts
-            var vote = document.getElementById('Vote' + val);
-            const up = vote.parentElement.querySelector('.up');
-            const down = vote.parentElement.querySelector('.down');
-
-            //#endregion
-
-            //#region localStorage
-
-            let cacheVote = votelist.filter(vote => vote.id === val)[0];
-
-            if (cacheVote?.isUp) return;
-            up.classList.remove('link-active');
-            down.classList.remove('link-active');
-
-            if (cacheVote)
-                votelist.splice(votelist.indexOf(cacheVote), 1);
-
-            up.classList.add('link-active');
-
-            votelist.push({ id: val, isUp: true });
-            // update local storage
-            localStorage.setItem(votelistKey, JSON.stringify(votelist));
-
-            //#endregion
-
-            var result = Bjax("/Forum/VoteUp?id=", val, "SP");
-            if (result) {
-                var vote = document.getElementById('Vote' + val);
-                vote.innerText = parseInt(vote.innerText) + 1;
-            } else {
-                UIkit.notification('ابتدا وارد سایت شوید');
-            }
-        }
-
-        function VoteDown(val) {
-
-            //#region buts
-            var vote = document.getElementById('Vote' + val);
-            const up = vote.parentElement.querySelector('.up');
-            const down = vote.parentElement.querySelector('.down');
-
-            //#endregion
-
-            //#region localStorage
-
-            let cacheVote = votelist.filter(vote => vote.id === val)[0];
-
-            if (cacheVote)
-                if (!cacheVote.isUp) return;
-
-            up.classList.remove('link-active');
-            down.classList.remove('link-active');
-
-            if (cacheVote)
-                votelist.splice(votelist.indexOf(cacheVote), 1);
-
-            down.classList.add('link-active');
-
-            votelist.push({ id: val, isUp: false });
-            // update local storage
-            localStorage.setItem(votelistKey, JSON.stringify(votelist));
-
-            //#endregion
-
-            var result = Bjax("/Forum/VoteDown?id=", val, "SP");
-            if (result) {
-                vote.innerText = parseInt(vote.innerText) - 1;
-            } else {
-                UIkit.notification('ابتدا وارد سایت شوید');
-            }
-        }
     </script>
+
+    <script src="~/js/vote.js"></script>
 
 }
