--- a/GhasreMobile/Views/Home/Conditions.cshtml
+++ b/GhasreMobile/Views/Home/Conditions.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TblConfig
 @{
-    ViewData["Title"] = "قوانین سایت";
+    ViewData["Title"] = "شرایط اقساطی";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -15,7 +15,7 @@
     @if (string.IsNullOrEmpty(Model.Value))
     {
         <h1 class="uk-alert uk-text-center">
-            قوانین سایت
+            شرایط فروش اقساطی
         </h1>
     }
     else
