--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -609,14 +609,15 @@ textarea {
     padding-bottom: 12px;
     background-color: #EFF1F5; }
     .header .top .uk-container {
-      grid-column-gap: 20px; }
+      grid-column-gap: 10px; }
     .header .top .logo {
       padding: 4px;
       filter: drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.2));
       background-color: #fff;
       -moz-border-radius: 1000px 1000px 1000px 1000px;
       -webkit-border-radius: 1000px 1000px 1000px 1000px;
-      border-radius: 1000px 1000px 1000px 1000px; }
+      border-radius: 1000px 1000px 1000px 1000px;
+      margin-left: 12px; }
       .header .top .logo img {
         width: 48px;
         height: 48px;
@@ -627,6 +628,29 @@ textarea {
         object-fit: cover;
         -o-object-position: center;
         object-position: center; }
+    .header .top .adv {
+      display: block;
+      -moz-transition: all ease 0.2s;
+      -o-transition: all ease 0.2s;
+      -webkit-transition: all ease 0.2s;
+      transition: all ease 0.2s;
+      -moz-border-radius: 4px 4px 4px 4px;
+      -webkit-border-radius: 4px 4px 4px 4px;
+      border-radius: 4px 4px 4px 4px;
+      margin: auto 0;
+      height: 39px;
+      padding: 0 6px;
+      -ms-flex-wrap: nowrap;
+      -webkit-flex-wrap: nowrap;
+      flex-wrap: nowrap; }
+      .header .top .adv span {
+        text-wrap: none;
+        white-space: nowrap; }
+    @media only screen and (max-width: 960px) {
+      .header .top .adv {
+        height: 32px; }
+      .header .top .w {
+        display: none; } }
     .header .top .search {
       background-color: #fff;
       border: 1px solid #e5e5e5;
@@ -653,9 +677,7 @@ textarea {
         margin-bottom: auto;
         height: 22px;
         min-height: 22px;
-        padding: 4px 6px !important; }
-        .header .top .search > span > span {
-          font-size: 11px; }
+        color: #888; }
       .header .top .search #txtSearchMain {
         color: #333;
         flex: auto; }
@@ -691,12 +713,13 @@ textarea {
       background-color: #96027E;
       margin: auto auto auto 0;
       padding: 1px;
-      overflow: hidden; }
-      .header .top .cart button, .header .top .cart a {
+      overflow: hidden;
+      height: 37px; }
+      .header .top .cart .icon {
         background-color: #9D189D;
         border: 0;
         padding: 6px; }
-        .header .top .cart button span, .header .top .cart a span {
+        .header .top .cart .icon span {
           color: #fff; }
       .header .top .cart .label {
         color: #fff;
@@ -757,13 +780,15 @@ textarea {
       margin-right: auto;
       height: 100%;
       background-color: transparent;
-      border: 0; }
+      border: 0;
+      display: flex;
+      flex-direction: row; }
       .header .bottom .profile span {
-        margin-top: auto !important;
-        margin-bottom: auto !important;
+        margin-right: 4px;
         vertical-align: central;
         text-align: center;
-        color: #333; }
+        color: #333;
+        height: 0 !important; }
       .header .bottom .profile .uk-icon {
         margin-left: 4px; }
 
@@ -800,7 +825,7 @@ textarea {
     box-shadow: 0;
     border-bottom: 1px solid #eee; }
     .header .top .uk-container {
-      grid-column-gap: 12px; }
+      grid-column-gap: 8px; }
     .header .top .logo {
       padding: 2px;
       filter: unset;
@@ -808,7 +833,8 @@ textarea {
       -moz-border-radius: 1000px 1000px 1000px 1000px;
       -webkit-border-radius: 1000px 1000px 1000px 1000px;
       border-radius: 1000px 1000px 1000px 1000px;
-      min-width: 38px; }
+      min-width: 38px;
+      margin-left: 0px; }
       .header .top .logo img {
         width: 42px;
         height: 42px;
@@ -873,13 +899,14 @@ textarea {
       background-color: #96027E;
       margin: auto auto auto 0;
       padding: 0px;
+      height: 32px;
       overflow: hidden;
       min-width: 144px; }
-      .header .top .cart button, .header .top .cart a {
+      .header .top .cart .icon {
         background-color: #9D189D;
         border: 0;
         padding: 4px; }
-        .header .top .cart button span, .header .top .cart a span {
+        .header .top .cart .icon span {
           color: #fff; }
       .header .top .cart .label {
         color: #fff;
@@ -952,34 +979,38 @@ textarea {
           height: 20px;
           width: 20px; } }
 
-@media only screen and (max-width: 590px) {
+@media only screen and (max-width: 696px) {
   .header .bottom nav a:nth-last-child(1) {
     display: none; } }
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 590px) {
   .header .bottom nav a:nth-last-child(2) {
     display: none; } }
 
-@media only screen and (max-width: 496px) {
+@media only screen and (max-width: 540px) {
   .header .bottom nav a:nth-last-child(3) {
     display: none; } }
 
-@media only screen and (max-width: 432px) {
+@media only screen and (max-width: 496px) {
   .header .bottom nav a:nth-last-child(4) {
     display: none; } }
 
-@media only screen and (max-width: 356px) {
+@media only screen and (max-width: 432px) {
   .header .bottom nav a:nth-last-child(5) {
     display: none; } }
 
-@media only screen and (max-width: 280px) {
+@media only screen and (max-width: 356px) {
   .header .bottom nav a:nth-last-child(6) {
+    display: none; } }
+
+@media only screen and (max-width: 280px) {
+  .header .bottom nav a:nth-last-child(7) {
     display: none; } }
 
 @media only screen and (max-width: 512px) {
   .header .top .cart {
     min-width: 70px; }
-    .header .top .cart button, .header .top .cart a {
+    .header .top .cart .icon {
       margin: auto;
       background-color: #96027E; }
     .header .top .cart .badge {
