--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -250,6 +250,7 @@ backdrop-filter: saturate(80%);
         margin: auto;
         width: 100%;
         height: 100%;
+        min-height: 168px;
         -o-object-fit: cover;
         object-fit: cover;
         -o-object-position: center;
