--- a/GhasreMobile/wwwroot/css/pages/index.scss
+++ b/GhasreMobile/wwwroot/css/pages/index.scss
@@ -208,6 +208,7 @@ $album-width: 290px;
                 margin: auto;
                 width: 100%;
                 height: 100%;
+                min-height: 168px;
                 @include obj;
             }
         }
