--- a/GhasreMobile/wwwroot/css/pages/product.css
+++ b/GhasreMobile/wwwroot/css/pages/product.css
@@ -210,7 +210,7 @@ backdrop-filter: saturate(80%);
             -webkit-border-radius: 1000px 1000px 1000px 1000px;
             border-radius: 1000px 1000px 1000px 1000px; }
         .pr-content .colours .grid li .active {
-          border: 1px solid rgba(150, 2, 126, 0.8); }
+          border: 1px solid rgba(150, 2, 126, 0.8) !important; }
     .pr-content .price {
       display: flex;
       flex-direction: column; }
