--- a/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
@@ -32,7 +32,7 @@
                                             <a onclick="Edit(@item.BrandId)" id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                            <a onclick="Delete(@item.BrandId)" id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                            <a onclick="Delete(@item.BrandId)" id="Edit" class="text-danger" uk-icon="trash-outline"></a>
                                         </span>
                                     </td>
                                 </tr>
