--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -15,6 +15,7 @@
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0 mt-1 mt-md-0">
                                     <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="متن جستجو" value="@ViewBag.Search">
+                                    <input id="CatagoryId" type="hidden" value="@ViewBag.CatagoryId" />
                                 </div>
                             </div>
                         </div>
@@ -29,6 +30,8 @@
                         </div>
                         <div class="form-group pb-0 mb-0 mr-1 mr-md-3 mt-1 mt-md-0">
                             <a id="Category" data-toggle="modal" data-target="#modalCategory" class="btn btn-secondary btn-sm text-white"> انتخاب دسته<span class="icon-holder uk-margin-small-right" uk-icon="file-tray-stacked"></span></a>
+                            <a href="/Admin/Product" class="btn btn-danger btn-sm text-white">حذف جستجو<span class="icon-holder uk-margin-small-right" uk-icon="file-tray-stacked"></span></a>
+
                         </div>
                     </div>
 
@@ -117,7 +120,95 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-end">
+
+                            @if (ViewBag.PageId == 1)
+                            {
+                                <li class="page-item d-none">
+                                    <a class="page-link" onclick="Page(@((int)ViewBag.PageId-1))">قبلی</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" href="/Admin/Product?pageId=@(ViewBag.PageId-1)&InPageCount=@ViewBag.InPageCount&Search=@ViewBag.Search&CatagoryId=@ViewBag.CatagoryId">قبلی</a>
+                                </li>
+
+                            }
+
+                            <li class="page-item">
+                                <select id="pageNumber" class="custom-select custom-select-sm">
+                                    @for (int i = 1; i <= (ViewBag.PageCount + 1); i++)
+                                    {
+                                        if (ViewBag.pageId == i)
+                                        {
+                                            <option class="page-item" selected value="@i">صفحه @i از @((int)ViewBag.PageCount + 1)</option>
+                                        }
+                                        else
+                                        {
+                                            <option class="page-item" value="@i">صفحه @i از @((int)ViewBag.PageCount + 1)</option>
+
+                                        }
+                                    }
+                                </select>
+                            </li>
+
+
+                            @if ((int)ViewBag.PageId > (int)ViewBag.PageCount)
+                            {
+                                <li class="page-item d-none">
+                                    <a class="page-link" onclick="Page(@((int)ViewBag.PageId + 1))">بعدی</a>
+                                </li>
+                            }
+                            else
+
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" href="/Admin/Product?pageId=@(ViewBag.PageId+1)&InPageCount=@ViewBag.InPageCount&Search=@ViewBag.Search&CatagoryId=@ViewBag.CatagoryId">بعدی</a>
+                                </li>
+
+                            }
+                            <li>
+                                <select id="InPageCount" class="custom-select custom-select-sm">
+                                    @if (ViewBag.InPageCount == 0)
+                                    {
+                                        <option value="0" selected>18 در هر صفحه</option>
+                                        <option value="20">20 در هر صفحه</option>
+                                        <option value="30">30 در هر صفحه</option>
+                                        <option value="40">40 در هر صفحه</option>
+
+                                    }
+
+                                    @if (ViewBag.InPageCount == 20)
+                                    {
+                                        <option value="0">18 در هر صفحه</option>
+                                        <option value="20" selected>20 در هر صفحه</option>
+                                        <option value="30">30 در هر صفحه</option>
+                                        <option value="40">40 در هر صفحه</option>
+
+                                    }
+                                    else if (ViewBag.InPageCount == 30)
+                                    {
+                                        <option value="0">18 در هر صفحه</option>
+                                        <option value="20">20 در هر صفحه</option>
+                                        <option value="30" selected>30 در هر صفحه</option>
+                                        <option value="40">40 در هر صفحه</option>
+
+                                    }
+                                    else if (ViewBag.InPageCount == 40)
+                                    {
+                                        <option value="0">18 در هر صفحه</option>
+                                        <option value="20">20 در هر صفحه</option>
+                                        <option value="30">30 در هر صفحه</option>
+                                        <option value="40" selected>40 در هر صفحه</option>
+                                    }
+
+
+                                </select>
+                            </li>
+                        </ul>
+                    </nav>
                 </nav>
             </div>
         </div>
@@ -136,28 +227,20 @@
                 </button>
             </div>
             <ul uk-accordion class="mt-3 pt-3 pb-3 uk-text-small uk-border-rounded">
-                <li class="col-md-4">
-                    <a class="uk-accordion-title uk-text-small" href="#">دسته بندی</a>
-                    <div class="uk-accordion-content">
-                        <ul class="uk-margin-right" uk-accordion>
-                            <li>
-                                <a class="uk-accordion-title uk-text-small">دسته 1</a>
-                                <div class="uk-accordion-content">
-                                    <ul class="uk-margin-right" uk-accordion>
-                                        <li>
-                                            <a class="uk-accordion-title uk-text-small">زیردسته 1</a>
-                                            <div class="uk-accordion-content">
-                                                <ul class="uk-margin-right" uk-accordion>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                        </ul>
-                    </div>
-                </li>
+                @{
+                    IEnumerable<DataLayer.Models.TblCatagory> Parentcatagories = ViewBag.Catagory;
+                }
+                @foreach (var item in Parentcatagories)
+                {
+                    <li class="col-md-4">
+                        <a class="uk-accordion-title uk-text-small" href="#">@item.Name</a>
+                        <div class="uk-accordion-content">
+                            <ul class="uk-margin-right" uk-accordion>
+                                @await Component.InvokeAsync("ShowChildsCatagoryInCreateProduct", new { Id = item.CatagoryId })
+                            </ul>
+                        </div>
+                    </li>
+                }
             </ul>
         </div>
     </div>
@@ -174,7 +257,13 @@
         }
 
         function BtnSearch() {
-            window.location.href = "/Admin/Product?page=1&Search=" + $("#SearchInput").val();
+            $("#overlay").fadeIn(300);
+            var pageId = $("#pageNumber option:selected").val();
+            var InPageCount = $("#InPageCount option:selected").val();
+            var Search = $("#SearchInput").val();
+            var CatagoryId = $("#CatagoryId").val();
+
+            window.location.href = "/Admin/Product?pageId=" + pageId + "&InPageCount=" + InPageCount + "&Search=" + Search + "&CatagoryId=" + CatagoryId;
         }
 
         function SpecialOffer(id) {
@@ -205,6 +294,41 @@
             });
         }
 
+        $("#pageNumber").change(function () {
+            $("#overlay").fadeIn(300);
+            var pageId = $("#pageNumber option:selected").val();
+            var InPageCount = $("#InPageCount option:selected").val();
+            var Search = $("#SearchInput").val();
+            var CatagoryId = $("#CatagoryId").val();
+
+            window.location.href = "/Admin/Product?pageId=" + pageId + "&InPageCount=" + InPageCount + "&Search=" + Search + "&CatagoryId=" + CatagoryId;
+
+
+
+        });
+
+
+        $("#InPageCount").change(function () {
+            $("#overlay").fadeIn(300);
+            var pageId = $("#pageNumber option:selected").val();
+            var InPageCount = $("#InPageCount option:selected").val();
+            var Search = $("#SearchInput").val();
+            var CatagoryId = $("#CatagoryId").val();
+
+            window.location.href = "/Admin/Product?pageId=" + pageId + "&InPageCount=" + InPageCount + "&Search=" + Search + "&CatagoryId=" + CatagoryId;
+
+        });
+
+
+        function SelectCatagory(id) {
+            $("#overlay").fadeIn(300);
+            var pageId = $("#pageNumber option:selected").val();
+            var InPageCount = $("#InPageCount option:selected").val();
+            var Search = $("#SearchInput").val();
+
+            window.location.href = "/Admin/Product?pageId=" + pageId + "&InPageCount=" + InPageCount + "&Search=" + Search + "&CatagoryId=" + id;
+
+        }
 
     </script>
 }
